# poe-inspect

./: .eslintrc  .gitignore  .gitmodules  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  package-lock.json  package.json  vite.config.ts
.claude/agents/: architectural-boundary-reviewer.md  domain-knowledge-reviewer.md
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml
app/: CLAUDE.md  biome.json  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
app/scripts/: kill-port.cjs
app/src/: App.tsx  BrowserApp.tsx  SettingsApp.tsx  ToastApp.tsx  main.tsx  mock-data.ts  profileCode.ts  rqe.ts  store.ts  (+1 more)
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/.cargo/: config.toml
app/src-tauri/capabilities/: default.json  desktop.json
app/src-tauri/data/profiles/: generic.json
app/src-tauri/src/: bridge.rs  clipboard.rs  clipboard_acquire.rs  game_data.rs  hotkey_hook.rs  lib.rs  main.rs  stash_scroll.rs  trade_state.rs  wayland.rs  windows.rs  x11_input.rs
app/src-tauri/src/commands/: browser.rs  chat_macro.rs  evaluate.rs  hotkey.rs  inspect.rs  mod.rs  settings.rs  trade.rs  updates.rs
crates/poe-bundle/: .gitignore  Cargo.toml  README.md  build.rs
crates/poe-bundle/examples/: check_index.rs  extract_file.rs  extract_utf8.rs  list_dat.rs
crates/poe-bundle/ooz/: CMakeLists.txt  kraken.cpp  stdafx.h
crates/poe-bundle/src/: lib.rs  main.rs  reader.rs  util.rs
crates/poe-dat/: CLAUDE.md  Cargo.toml
crates/poe-dat/src/: dat_reader.rs  lib.rs
crates/poe-dat/src/stat_desc/: grammar.pest  mod.rs  parser.rs  reverse.rs  types.rs
crates/poe-dat/src/tables/: extract.rs  mod.rs  types.rs
crates/poe-dat/tests/: extract_tables.rs  parse_real_file.rs  probe_tables.rs  reverse_index.rs
crates/poe-dat/tests/test_data/: scripter_boomboom_mods.txt
crates/poe-data/: CLAUDE.md  Cargo.toml
crates/poe-data/data/: armourtypes.datc64  baseitemtypes.datc64  clientstrings.datc64  itemclasscategories.datc64  itemclasses.datc64  mod_families.txt  modfamily.datc64  modtype.datc64  rarity.datc64  shieldtypes.datc64  tags.datc64  unique_items.json  uniquestashlayout.datc64  uniquestashtypes.datc64  weapontypes.datc64  words.datc64
crates/poe-data/src/: browser.rs  domain.rs  game_data.rs  lib.rs
crates/poe-data/src/domain/: inheritance.rs  item_limits.rs  item_text.rs  mod.rs  pseudos.rs  tiers.rs  trade_mappings.rs
crates/poe-data/tests/: load_game_data.rs
crates/poe-eval/: CLAUDE.md  Cargo.toml
crates/poe-eval/src/: affix.rs  evaluate.rs  helpers.rs  item_result.rs  lib.rs  predicate.rs  profile.rs  rule.rs  schema.rs  tier.rs
crates/poe-eval/tests/: evaluate_fixtures.rs
crates/poe-item/: CLAUDE.md  Cargo.toml
crates/poe-item/src/: grammar.pest  lib.rs  parser.rs  resolver.rs  types.rs
crates/poe-item/tests/: parse_fixtures.rs  resolve_fixtures.rs
crates/poe-item/tests/test_data/: COVERAGE.md  battered-foil-rare-ess-craft.txt  coffin.txt  gem-support-faster-casting.txt  leap-slam.txt  magic-axe-two-handed.txt  magic-cluster-jewel-normal.txt  magic-flask-life.txt  magic-flask-mana.txt  normal-map-alleyways.txt  normal-staff-elder.txt  rare-amulet-talisman-corrupted.txt  rare-axe-shaper.txt  rare-body-armour-enchanted.txt  rare-boots-crafted.txt  rare-gloves-eater-exarch.txt  rare-gloves-warlord.txt  rare-map-forge-phoenix.txt  rare-map-residence-reward.txt  rare-map-shore.txt  rare-ring-synthesised.txt  rare-sword-essence-crafted.txt  rare-wand-standard.txt  unique-bow-short-bow.txt  unique-flask-doedres-flask.txt  unique-ring-ventors-gamble.txt
crates/poe-rqe/: CLAUDE.md  Cargo.toml
crates/poe-rqe-client/: CLAUDE.md  Cargo.toml
crates/poe-rqe-client/src/: client.rs  convert.rs  lib.rs
crates/poe-rqe/benches/: match_throughput.rs
crates/poe-rqe/src/: eval.rs  index.rs  lib.rs  predicate.rs  store.rs
crates/poe-trade/: CLAUDE.md  Cargo.toml
crates/poe-trade/src/: client.rs  filter_schema.rs  lib.rs  query.rs  rate_limit.rs  stats_index.rs  types.rs
crates/poe-trade/tests/: e2e.rs  filter_schema.rs  query_builder.rs  stats_index.rs
crates/poe-trade/tests/fixtures/: trade_stats_3.28.json
crates/rqe-cli/: Cargo.toml
crates/rqe-cli/src/: main.rs
docs/: DEVLOG.md  HYPOTHESIS.md  RESEARCH_SYNTHESIS.md  ROADMAP.md  RQE_DESIGN.md  app-design.md  auto-updater.md  client-log-watcher.md  crafting-tiers.md  data-driven-plan.md  data-pipeline.md  domain-violations.md  feedback-2026-03-09.md  feedback-2026-03-10.md  game-data-browser.md  ggpk-data-deep-dive.md  ggpk-data-inventory.md  hybrid-mod-picker-plan.md  local-stat-id-resolution.md  map-danger-assessment.md  phase-5-eval-integration.md  phase-6-stat-id-matching.md  phase-8d-unified-scoring.md  plan-bridge-elimination.md  poe-data-gap-filling.md  poe-item-grammar-review.md  poe-trade-redesign.md  pseudo-stats-design.md  quick-profile-switching.md  reference-overlays-design.md  rqe-app-integration-plan.md  rqe-decision-dag.md  rqe-settings-design.md  trade-filter-alignment.md  trade-integration-plan.md  trade-mode-separation.md  trade-query-builder-design.md  trade-schema-redesign.md  trade-ui-design.md
pipeline/: generate-unique-items.sh  update-game-data.sh
pipeline/extract-game-data/: Cargo.toml
pipeline/extract-game-data/src/: main.rs
pipeline/generate-ts-types/: Cargo.toml
pipeline/generate-ts-types/src/: main.rs
rqe-server/: CLAUDE.md  Cargo.toml
rqe-server/src/: auth.rs  db.rs  main.rs
rqe-server/tests/: poe_fixtures.rs
rqe-server/tests/fixtures/entry/: crimson_magic.json  crimson_unique.json  crimson_w_mods_1.json  crimson_w_mods_2.json  item_socket_2_link_0.json  item_socket_4_link_3.json  paua_ring_rare.json  two_handed_weapon_rare.json
rqe-server/tests/fixtures/rq/: wanted_boots_unique.json  wanted_boots_unique_new_format.json  wanted_crimson_mod.json  wanted_crimson_mod_and_not.json  wanted_crimson_mod_count.json  wanted_crimson_mod_count_2.json  wanted_crimson_mod_not.json  wanted_crimson_rare.json  wanted_mod_and_not_count.json
src/: app.tsx  main.tsx  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
(+148 files in other folders)
