[workspace]
resolver = "2"
members = [
    "crates/poe-dat",
    "crates/poe-item",
    "crates/poe-data",
    "crates/poe-eval",
    "crates/poe-rqe",
    "crates/poe-rqe-client",
    "crates/rqe-cli",
    "crates/poe-trade",
    "rqe-server",
]
exclude = [
    "app/src-tauri",
    "pipeline/extract-game-data",
]

[workspace.package]
edition = "2024"
rust-version = "1.85"
license = "MIT"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"
struct_excessive_bools = "allow"
too_many_lines = "allow"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tokio = { version = "1", features = ["full"] }
axum = "0.8"
rusqlite = { version = "0.34", features = ["bundled"] }
