[package]
name = "rqe-server"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "HTTP server for the Reverse Query Engine"

[dependencies]
poe-rqe = { path = "../crates/poe-rqe" }
axum = { workspace = true }
tower-http = { version = "0.6", features = ["cors"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rusqlite = { workspace = true }

[lints]
workspace = true
