[package]
name = "poe-inspect-app"
version = "0.1.0"
description = "Real-time item evaluation overlay for Path of Exile"
authors = ["timeloop-vault"]
edition = "2021"

[lib]
name = "poe_inspect_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
enigo = "0.2"
tauri-plugin-store = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"

# Workspace crates
poe-item = { path = "../../crates/poe-item" }
poe-eval = { path = "../../crates/poe-eval" }
poe-data = { path = "../../crates/poe-data" }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-window-state = "2"
