[package]
name = "poe-inspect-app"
version = "0.1.0"
description = "Real-time item evaluation overlay for Path of Exile"
authors = ["timeloop-vault"]
edition = "2021"

[lib]
name = "poe_inspect_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
enigo = { version = "0.6.1", features = ["xdo", "wayland"] }
tauri-plugin-store = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-mcp = { git = "https://github.com/P3GLEG/tauri-plugin-mcp" }

# Workspace crates (ts feature enables TypeScript type generation via ts-rs)
poe-item = { path = "../../crates/poe-item", features = ["ts"] }
poe-eval = { path = "../../crates/poe-eval", features = ["ts"] }
poe-data = { path = "../../crates/poe-data", features = ["ts"] }
poe-trade = { path = "../../crates/poe-trade", features = ["ts"] }

# Async primitives for trade client state (held across .await points)
tokio = { version = "1", features = ["sync"] }

# Open URLs in the default browser
open = "5"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-window-state = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18"
gdk = "0.18"
gtk-layer-shell = { version = "0.8", features = ["v0_6"] }
x11rb = { version = "0.13", features = ["xtest"] }
wayland-client = "0.31"
wayland-protocols-wlr = { version = "0.3", features = ["client"] }
os_pipe = "1"
