[package]
name = "poe-data"
version = "0.1.0"
description = "Game data types and lookup tables built from parsed GGPK data"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[features]
serde = ["dep:serde"]
ts = ["serde", "dep:ts-rs"]

[dependencies]
poe-dat = { path = "../poe-dat" }
serde = { workspace = true, optional = true }
ts-rs = { version = "12", optional = true }
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
poe-item = { path = "../poe-item" }
