[package]
name = "poe-eval"
version = "0.1.0"
description = "Evaluate parsed items against user-defined filter rules"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[features]
ts = ["dep:ts-rs", "poe-item/ts", "poe-data/ts"]

[dependencies]
poe-item = { path = "../poe-item", features = ["serde"] }
poe-data = { path = "../poe-data", features = ["serde"] }
serde.workspace = true
ts-rs = { version = "12", optional = true }
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
poe-dat = { path = "../poe-dat" }
serde_json = "1"
