[package]
name = "poe-item"
version = "0.1.0"
description = "Parse PoE Ctrl+Alt+C item text into structured types"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
poe-data = { path = "../poe-data" }
pest = "2"
pest_derive = "2"
regex = "1"
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
poe-dat = { path = "../poe-dat" }
