[package]
name = "poe-rqe-client"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Client library for the RQE service — converts PoE items to Entry format and talks to rqe-server"

[dependencies]
poe-item = { path = "../poe-item", features = ["serde"] }
poe-rqe = { path = "../poe-rqe" }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
