[package]
name = "poe-rqe"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Reverse Query Engine — match items against registered queries"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
