[package]
name = "poe-trade"
version = "0.1.0"
description = "Trade API client for pathofexile.com — stats index, query builder, price lookup"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[features]
ts = ["dep:ts-rs", "poe-item/ts", "poe-data/ts"]

[dependencies]
poe-item = { path = "../poe-item", features = ["serde"] }
poe-data = { path = "../poe-data" }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
ts-rs = { version = "12", optional = true }

[dev-dependencies]
poe-dat = { path = "../poe-dat" }
