[package]
name = "extract-game-data"
version = "0.1.0"
edition = "2021"
description = "Extract datc64 tables from PoE GGPK for the poe-inspect pipeline"

[[bin]]
name = "extract-game-data"
path = "src/main.rs"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }

[dependencies]
poe_bundle = { git = "https://github.com/ex-nihil/poe-bundle.git" }
poe-dat = { path = "../../crates/poe-dat" }
clap = { version = "4.0", features = ["derive"] }
image = { version = "0.25", default-features = false, features = ["png", "webp"] }
ddsfile = "0.5"
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
